--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^2.2.0
   firebase_core: ^1.11.0
   google_sign_in: ^5.2.3
+  firebase_auth: ^3.3.5
 
 dev_dependencies:
   flutter_test:
