--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^5.2.3
   firebase_auth: ^3.3.5
   mocktail: ^0.2.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
