--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^3.3.5
   mocktail: ^0.2.0
   shimmer: ^2.0.0
+  mobx: ^2.0.6+1
+  flutter_mobx: ^2.0.4
+  mobx_codegen: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
