--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   mobx: ^2.0.6+1
   flutter_mobx: ^2.0.4
   mobx_codegen: ^2.0.4
+  cloud_firestore: ^3.1.7
 
 dev_dependencies:
   flutter_test:
