--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_mobx: ^2.0.4
   mobx_codegen: ^2.0.4
   cloud_firestore: ^3.1.7
+  extended_masked_text: ^2.3.1
 
 dev_dependencies:
   flutter_test:
