--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   mobx_codegen: ^2.0.4
   cloud_firestore: ^3.1.7
   extended_masked_text: ^2.3.1
+  bot_toast: ^4.0.1
 
 dev_dependencies:
   flutter_test:
